--- a/Tkinder/index.ipynb
+++ b/Tkinder/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,20 @@
     "\n",
     "canvas = Canvas(home, height=800, width=1500)\n",
     "canvas.pack()\n",
+    "\n",
+    "frame_top = Frame(home, bg=\"#c2c2d6\")\n",
+    "frame_top.place(relx=0.02, rely=0.03, relwidth=0.96, relheight=0.08)\n",
+    "\n",
+    "frame_bottom = Frame(home, bg=\"#c2c2d6\")\n",
+    "frame_bottom.place(relx=0.02, rely=0.12, relwidth=0.96, relheight=0.85)\n",
+    "\n",
+    "title = Label(frame_top, bg=\"#c2c2d6\", text = \"Exam Application Form\", font=\"Verdana 20 italic\")\n",
+    "title.pack(pady=20)\n",
+    "\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"First Name\", font=\"Vedana 10 bold\").pack(padx=1, pady=1, anchor=NW)\n",
+    "textbox1 = Text(frame_bottom, width=20, height=1)\n",
+    "textbox1.tag_configure('style', foreground='#f0f0f5', font=('Verdana', 10, 'bold'))\n",
+    "textbox1.pack(side= LEFT)\n",
     "\n",
     "home.mainloop()"
    ]
