--- a/Tkinder/index.ipynb
+++ b/Tkinder/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "home = Tk()\n",
     "\n",
-    "canvas = Canvas(home, height=800, width=1500)\n",
+    "canvas = Canvas(home, height=950, width=700)\n",
     "canvas.pack()\n",
     "\n",
     "frame_top = Frame(home, bg=\"#c2c2d6\")\n",
@@ -28,40 +28,57 @@
     "frame_bottom.place(relx=0.02, rely=0.12, relwidth=0.96, relheight=0.85)\n",
     "\n",
     "frame_in = Frame(home, bg=\"#b3b3cc\")\n",
-    "frame_in.place(relx=0.02, rely=0.35,relwidth=0.96, relheight= 0.62)\n",
+    "frame_in.place(relx=0.02, rely=0.28,relwidth=0.96, relheight= 0.69)\n",
     "\n",
     "title = Label(frame_top, bg=\"#c2c2d6\", text = \"Exam Application Form\", font=\"Verdana 20 italic\")\n",
     "title.pack(pady=20)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"First Name :\", font=\"Helvetica 11 \").pack(padx=30, pady=10, anchor=NW)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"First Name :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
     "textbox1 = Text(frame_bottom, width=20, height=1)\n",
     "textbox1.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox1.place(relx=0.08, rely=0.018)\n",
+    "textbox1.place(relx=0.14, rely=0.014)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Last Name :\", font=\"Helvetica 11 \").pack(padx=30, pady=15, anchor=NW)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Last Name :\", font=\"Helvetica 11 \").pack(padx=10, pady=15, anchor=NW)\n",
     "textbox2 = Text(frame_bottom, width=20, height=1)\n",
     "textbox2.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox2.place(relx=0.08, rely=0.085)\n",
+    "textbox2.place(relx=0.14, rely=0.074)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Number     :\", font=\"Helvetica 11 \").pack(padx=30, pady=18, anchor=NW)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Number      :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
     "textbox3 = Text(frame_bottom, width=20, height=1)\n",
     "textbox3.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox3.place(relx=0.08, rely=0.17)\n",
+    "textbox3.place(relx=0.14, rely=0.135)\n",
     "\n",
     "var = IntVar()\n",
     "\n",
     "r1 = Radiobutton(frame_bottom, text = \"Associate Degree\", variable = var, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r1.place(relx=0.5, rely=0.018 )\n",
+    "r1.place(relx=0.55, rely=0.014 )\n",
     "\n",
     "r2 = Radiobutton(frame_bottom, text = \"Lisance\", variable = var, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r2.place(relx=0.65, rely=0.018 )\n",
+    "r2.place(relx=0.82, rely=0.014 )\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Branch  :\", font=\"Helvetica 11 \").place(relx=0.45, rely=0.085)\n",
-    "textbox4 = Text(frame_bottom, width=40, height=1)\n",
+    "var = IntVar()\n",
+    "\n",
+    "r3 = Radiobutton(frame_bottom, text = \"I. Formal\", variable = var, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r3.place(relx=0.55, rely=0.074)\n",
+    "\n",
+    "r4 = Radiobutton(frame_bottom, text = \"II. Formal\", variable = var, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r4.place(relx=0.82, rely=0.074 )\n",
+    "\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Branch  :\", font=\"Helvetica 11 \").place(relx=0.45, rely=0.135)\n",
+    "textbox4 = Text(frame_bottom, width=35, height=1)\n",
     "textbox4.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox4.place(relx=0.5, rely=0.086)\n",
+    "textbox4.place(relx=0.55, rely=0.135)\n",
     "\n",
+    "Label(frame_in, bg=\"#b3b3cc\", text=\"Select the Lesson :\", font=\"Helvetica 11\").pack(padx=10, pady=10, anchor=NW)\n",
     "\n",
+    "lesson_dropdown = StringVar(frame_in)\n",
+    "lesson_dropdown.set(\"Select to...\")\n",
+    "\n",
+    "lesson_dropdown_menu = OptionMenu(\n",
+    "    frame_in, \n",
+    "    lesson_dropdown,\n",
+    "    \"\" \n",
+    "    )\n",
     "\n",
     "home.mainloop()"
    ]
