--- a/Tkinder/index.ipynb
+++ b/Tkinder/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +77,20 @@
     "lesson_dropdown_menu = OptionMenu(\n",
     "    frame_in, \n",
     "    lesson_dropdown,\n",
-    "    \"\" \n",
+    "    \"Select to...\",\n",
+    "    \"Algorithms and Programming\",\n",
+    "    \"Data Structures\",\n",
+    "    \"Visual Programming\",\n",
+    "    \"Operating Systems\",\n",
+    "    \"Numerical Methods in Engineering\",\n",
+    "    \"Database Management Systems\",\n",
+    "    \"Computer Architecture\",\n",
+    "    \"Formal Languages and Automata\",\n",
+    "    \"Computer Network Technologies\",\n",
+    "    \"Microprocessor\",\n",
+    "    \"Object Oriented Programming Applications\",\n",
     "    )\n",
+    "lesson_dropdown_menu.place(relwidth=0.4, relheight=0.04, relx=0.21, rely=0.01)\n",
     "\n",
     "home.mainloop()"
    ]
