--- a/Tkinder/index.ipynb
+++ b/Tkinder/index.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
-    "from tkinter import *"
+    "from tkinter import *\n",
+    "from tkcalendar import DateEntry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "home = Tk()\n",
     "\n",
-    "canvas = Canvas(home, height=950, width=700)\n",
+    "canvas = Canvas(home, height=800, width=550)\n",
     "canvas.pack()\n",
     "\n",
     "frame_top = Frame(home, bg=\"#c2c2d6\")\n",
@@ -27,55 +28,52 @@
     "frame_bottom = Frame(home, bg=\"#c2c2d6\")\n",
     "frame_bottom.place(relx=0.02, rely=0.12, relwidth=0.96, relheight=0.85)\n",
     "\n",
-    "frame_in = Frame(home, bg=\"#b3b3cc\")\n",
-    "frame_in.place(relx=0.02, rely=0.28,relwidth=0.96, relheight= 0.69)\n",
-    "\n",
     "title = Label(frame_top, bg=\"#c2c2d6\", text = \"Exam Application Form\", font=\"Verdana 20 italic\")\n",
     "title.pack(pady=20)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"First Name :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
-    "textbox1 = Text(frame_bottom, width=20, height=1)\n",
-    "textbox1.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox1.place(relx=0.14, rely=0.014)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"First Name            :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
+    "textbox1 = Text(frame_bottom, width=35, height=1)\n",
+    "textbox1.tag_configure('style', foreground='#e0e0eb', font=('Helvetica', 11))\n",
+    "textbox1.place(relx=0.27, rely=0.014)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Last Name :\", font=\"Helvetica 11 \").pack(padx=10, pady=15, anchor=NW)\n",
-    "textbox2 = Text(frame_bottom, width=20, height=1)\n",
-    "textbox2.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox2.place(relx=0.14, rely=0.074)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Last Name            :\", font=\"Helvetica 11 \").pack(padx=10, pady=15, anchor=NW)\n",
+    "textbox2 = Text(frame_bottom, width=35, height=1)\n",
+    "textbox2.tag_configure('style', foreground='#e0e0eb', font=('Helvetica', 11))\n",
+    "textbox2.place(relx=0.27, rely=0.085)\n",
     "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Number      :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
-    "textbox3 = Text(frame_bottom, width=20, height=1)\n",
-    "textbox3.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox3.place(relx=0.14, rely=0.135)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Number                 :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
+    "textbox3 = Text(frame_bottom, width=35, height=1)\n",
+    "textbox3.tag_configure('style', foreground='#e0e0eb', font=('Helvetica', 11))\n",
+    "textbox3.place(relx=0.27, rely=0.155)\n",
     "\n",
-    "var = IntVar()\n",
-    "\n",
-    "r1 = Radiobutton(frame_bottom, text = \"Associate Degree\", variable = var, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r1.place(relx=0.55, rely=0.014 )\n",
-    "\n",
-    "r2 = Radiobutton(frame_bottom, text = \"Lisance\", variable = var, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r2.place(relx=0.82, rely=0.014 )\n",
-    "\n",
-    "var = IntVar()\n",
-    "\n",
-    "r3 = Radiobutton(frame_bottom, text = \"I. Formal\", variable = var, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r3.place(relx=0.55, rely=0.074)\n",
-    "\n",
-    "r4 = Radiobutton(frame_bottom, text = \"II. Formal\", variable = var, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
-    "r4.place(relx=0.82, rely=0.074 )\n",
-    "\n",
-    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Branch  :\", font=\"Helvetica 11 \").place(relx=0.45, rely=0.135)\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Branch                  :\", font=\"Helvetica 11 \").pack(padx=10, pady=10, anchor=NW)\n",
     "textbox4 = Text(frame_bottom, width=35, height=1)\n",
-    "textbox4.tag_configure('style', foreground='#f0f0f5', font=('Helvetica', 11))\n",
-    "textbox4.place(relx=0.55, rely=0.135)\n",
+    "textbox4.tag_configure('style', foreground='#e0e0eb', font=('Helvetica', 11))\n",
+    "textbox4.place(relx=0.27, rely=0.22)\n",
     "\n",
-    "Label(frame_in, bg=\"#b3b3cc\", text=\"Select the Lesson :\", font=\"Helvetica 11\").pack(padx=10, pady=10, anchor=NW)\n",
+    "var1 = IntVar()\n",
     "\n",
-    "lesson_dropdown = StringVar(frame_in)\n",
+    "r1 = Radiobutton(frame_bottom, text = \"Associate Degree\", variable = var1, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r1.place(relx=0.27, rely=0.28 )\n",
+    "\n",
+    "r2 = Radiobutton(frame_bottom, text = \"Lisance\", variable = var1, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r2.place(relx=0.6, rely=0.28 )\n",
+    "\n",
+    "var2 = IntVar()\n",
+    "\n",
+    "r3 = Radiobutton(frame_bottom, text = \"I. Formal\", variable = var2, value = 1, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r3.place(relx=0.27, rely=0.35)\n",
+    "\n",
+    "r4 = Radiobutton(frame_bottom, text = \"II. Formal\", variable = var2, value = 2, bg = \"#c2c2d6\", font = \"Helvetica 11 \")\n",
+    "r4.place(relx=0.6, rely=0.35)\n",
+    "\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Select the Lesson :\", font=\"Helvetica 11\").place(relx=0.018, rely=0.4)\n",
+    "\n",
+    "lesson_dropdown = StringVar(frame_bottom)\n",
     "lesson_dropdown.set(\"Select to...\")\n",
     "\n",
     "lesson_dropdown_menu = OptionMenu(\n",
-    "    frame_in, \n",
+    "    frame_bottom, \n",
     "    lesson_dropdown,\n",
     "    \"Select to...\",\n",
     "    \"Algorithms and Programming\",\n",
@@ -90,7 +88,13 @@
     "    \"Microprocessor\",\n",
     "    \"Object Oriented Programming Applications\",\n",
     "    )\n",
-    "lesson_dropdown_menu.place(relwidth=0.4, relheight=0.04, relx=0.21, rely=0.01)\n",
+    "lesson_dropdown_menu.place(relwidth=0.52, relheight=0.04, relx=0.27, rely=0.4)\n",
+    "\n",
+    "Label(frame_bottom, bg=\"#c2c2d6\", text=\"Select the Date     :\", font=\"Helvetica 11\").place(relx=0.018, rely=0.47)\n",
+    "\n",
+    "lesson_date = DateEntry(frame_bottom, width=20, bacgraund= \"blue\", foregraund= \"black\", borderwidth = 1, locele = \"de_DE\")\n",
+    "lesson_date._top_cal.overrideredirect(False)\n",
+    "lesson_date.place(relwidth=0.52, relheight=0.04, relx=0.27, rely=0.47)\n",
     "\n",
     "home.mainloop()"
    ]
